<resources>
    <string name="app_name">CoffeeShop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ar_record">开始录制</string>
    <string name="ar_stop">停止录制</string>
    <string name="speed_super_slow">极慢"</string>
    <string name="speed_slow">慢"</string>
    <string name="speed_normal">正常"</string>
    <string name="speed_fast">快"</string>
    <string name="speed_super_fast">极快"</string>
    <string name="speed_range">分段变速</string>

    <string name="dlg_save_draft_title">输入草稿标题</string>
    <string name="dlg_save_draft_yes">保存</string>
    <string name="toast_draft_title_exist">已存在相同标题的草稿</string>
    <string name="toast_draft_save_success">草稿保存成功</string>
    <string name="toast_draft_save_fail">草稿保存失败</string>
    <string name="toast_draft_recover_success">草稿恢复成功</string>
    <string name="toast_draft_recover_fail">草稿恢复失败</string>
    <string name="dlg_delete_draft">确认删除草稿</string>

    <string name="desc_duration">持续时间</string>
    <string name="desc_transition_time">转场时间</string>
    <string name="desc_second">秒</string>
    <string name="desc_ms">ms</string>
    <string name="desc_paint_color">画笔颜色</string>
    <string name="desc_paint_size">画笔大小</string>
    <string name="desc_paint_undo">撤销</string>
    <string name="desc_paint_clear">清除</string>
    <string name="desc_image_tip">请选择所需的贴图！</string>
    <string name="desc_compose_display_tip">展现方式：</string>
    <string name="desc_compose_display_full">全屏</string>
    <string name="desc_compose_display_fit">自适应</string>

    <item name="selector_view" type="id"></item>
    <item name="rect_view" type="id"></item>

    <string name="upload">上传</string>
    <string name="cancel_upload">取消上传</string>
    <string name="if_edit_video">是否编辑视频</string>
    <string name="dlg_yes">是</string>
    <string name="dlg_no">否</string>

</resources>
